--- a/docs/003.API設計書/md/API-004.md
+++ b/docs/003.API設計書/md/API-004.md
@@ -101,10 +101,10 @@ se -->>- api: return
 
 ##### base
 
-| key     | type   | value            | note |
-| :------ | :----- | :--------------- | :--- |
-| data    | array  | GoalResource     |      |
-| message | string | 検索完了しました |      |
+| key     | type         | value            | note |
+| :------ | :----------- | :--------------- | :--- |
+| data    | GoalResource |                  |      |
+| message | string       | 検索完了しました |      |
 
 ###### GoalResource
 
@@ -116,8 +116,8 @@ se -->>- api: return
 | user_id         | int    | users.id                |      |
 | user_name       | string | users.name              |      |
 | goal_department | string | t_goals.goal_department |      |
-| gole_first      | string | t_goals.gole_first      |      |
-| gole_secound    | string | t_goals.gole_secound    |      |
+| goal_first      | string | t_goals.goal_first      |      |
+| goal_secound    | string | t_goals.goal_secound    |      |
 
 ##### sample json
 
@@ -131,8 +131,8 @@ se -->>- api: return
       user_id: 1
       user_name: "aaa"
       goal_department: "XXXXXX"
-      gole_first: "XXXXXX"
-      gole_secound: "XXXXXX"
+      goal_first: "XXXXXX"
+      goal_secound: "XXXXXX"
     }
   ]
 }
