--- a/docs/003.API設計書/md/API-004.md
+++ b/docs/003.API設計書/md/API-004.md
@@ -123,7 +123,7 @@ se -->>- api: return
 
 ```json5
 {
-  data: [
+  data: {
     {
       goal_id: 1
       term_id: 1
@@ -134,7 +134,7 @@ se -->>- api: return
       goal_first: "XXXXXX"
       goal_secound: "XXXXXX"
     }
-  ]
+  }
 }
 ```
 
